WebSocket用エンドポイントの仕様を追加
